<?xml version="1.0" encoding="utf-8"?>
<!-- Options menu for the MainActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_go_to_catalog"
        android:title="@string/action_go_to_title"
        android:icon="@drawable/ic_add_circle_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />
</menu>